--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -129,13 +129,15 @@
   height: 1.75rem;
 }
 
-.berita-foto-row {
+.berita-foto-row,
+.berita-container-row {
   width: 100%;
   display: flex;
   gap: 2rem;
 }
 
-.berita-foto-container {
+.berita-foto-container,
+.berita-container {
   width: 31.5%;
 }
 
@@ -159,4 +161,57 @@
 .berita-foto-link:hover {
   cursor: pointer;
   transform: scale(1.05);
+}
+
+.berita-container {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.berita-img {
+  width: 100%;
+  height: 35%;
+  object-fit: cover;
+  border-radius: 0.5rem;
+  border: 0.01rem solid var(--main-lightgray);
+  box-shadow: 0 0 0.75rem rgba(0, 0, 0, 0.15);
+}
+
+.berita-title {
+  font-weight: 500;
+  min-height: 4.5rem;
+  color: var(--main-melon);
+}
+
+.berita-info-row {
+  display: flex;
+  gap: 1rem;
+  font-size: 0.85rem;
+  color: var(--main-darkgray);
+}
+
+.berita-info-container {
+  display: flex;
+  align-items: center;
+  gap: 0.25rem;
+}
+
+.berita-info-container a {
+  color: var(--main-melon);
+}
+
+.berita-info-icon {
+  height: 1.5rem;
+}
+
+.berita-content {
+  font-size: 0.9rem;
+  color: var(--main-darkgray);
+}
+
+.berita-container a:hover {
+  text-decoration: underline;
 }
