--- a/assets/styles/berita.css
+++ b/assets/styles/berita.css
@@ -3,10 +3,76 @@
   height: 15vh;
 }
 
+.navbar {
+  position: absolute;
+}
+
 .main {
   width: 100%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: flex-start;
+  padding: 7.5vh 12.5vh;
+  gap: 2rem;
+}
+
+.berita-directory-container {
+  display: flex;
+  gap: 0.5rem;
+}
+
+.berita-directory {
+  color: var(--main-melon);
+}
+
+.berita-container {
+  width: 65%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 1rem;
+}
+
+.berita-img {
+  width: 100%;
+  object-fit: cover;
+  border-radius: 0.5rem;
+  border: 0.01rem solid var(--main-lightgray);
+  box-shadow: 0 0 0.75rem rgba(0, 0, 0, 0.15);
+}
+
+.berita-title {
+  font-weight: 500;
+  font-size: 1.5rem;
+}
+
+.berita-info-row {
+  display: flex;
+  gap: 1rem;
+  font-size: 1rem;
+  color: var(--main-darkgray);
+}
+
+.berita-info-container {
+  display: flex;
+  align-items: center;
+  gap: 0.25rem;
+}
+
+.berita-info-container a {
+  color: var(--main-melon);
+}
+
+.berita-info-icon {
+  height: 1.5rem;
+}
+
+.berita-content {
+  font-size: 1.1rem;
+  color: var(--main-darkgray);
+}
+
+.berita-container a:hover {
+  text-decoration: underline;
 }
