--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -19,16 +19,16 @@
 }
 
 .main {
-  /* height: 200vh; */
+  padding: 7.5vh 0;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+  gap: 15vh;
 }
 
 .main-sections {
-  padding: 7.5vh 0;
   width: 80%;
   display: flex;
   flex-direction: column;
