--- a/assets/styles/berita.css
+++ b/assets/styles/berita.css
@@ -11,22 +11,21 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  align-items: center;
   justify-content: flex-start;
   padding: 7.5vh 12.5vh;
   gap: 2rem;
 }
 
-.berita-directory-container {
+.main-berita-directory-container {
   display: flex;
   gap: 0.5rem;
 }
 
-.berita-directory {
+.main-berita-directory {
   color: var(--main-melon);
 }
 
-.berita-container {
+.main-berita-container {
   width: 65%;
   display: flex;
   flex-direction: column;
@@ -34,7 +33,7 @@
   gap: 1rem;
 }
 
-.berita-img {
+.main-berita-img {
   width: 100%;
   object-fit: cover;
   border-radius: 0.5rem;
@@ -42,37 +41,83 @@
   box-shadow: 0 0 0.75rem rgba(0, 0, 0, 0.15);
 }
 
-.berita-title {
+.main-berita-title {
   font-weight: 500;
   font-size: 1.5rem;
 }
 
-.berita-info-row {
+.main-berita-info-row {
   display: flex;
   gap: 1rem;
   font-size: 1rem;
   color: var(--main-darkgray);
 }
 
+.main-berita-info-container,
 .berita-info-container {
   display: flex;
   align-items: center;
   gap: 0.25rem;
 }
 
-.berita-info-container a {
+.main-berita-info-container a {
   color: var(--main-melon);
 }
 
-.berita-info-icon {
+.main-berita-info-icon {
   height: 1.5rem;
 }
 
-.berita-content {
+.main-berita-content {
   font-size: 1.1rem;
   color: var(--main-darkgray);
 }
 
-.berita-container a:hover {
+.main-berita-container a:hover {
   text-decoration: underline;
+}
+
+.berita-lainnya-container {
+  height: 100%;
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.berita-container {
+  width: 100%;
+  display: flex;
+  font-size: 0.85rem;
+  display: flex;
+  gap: 0.5rem;
+}
+
+.berita-img {
+  width: 40%;
+  height: 17.5vh;
+  object-fit: cover;
+  border-radius: 0.5rem;
+  border: 0.01rem solid var(--main-lightgray);
+  box-shadow: 0 0 0.75rem rgba(0, 0, 0, 0.15);
+}
+
+.berita-text-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 0.5rem;
+}
+
+.berita-title {
+  font-weight: 500;
+}
+
+.berita-info-icon {
+  height: 1.25rem;
+}
+
+.berita-info-container {
+  font-size: 0.65rem;
+  color: var(--main-darkgray);
 }
