--- a/assets/styles/hero.css
+++ b/assets/styles/hero.css
@@ -13,7 +13,11 @@
   left: 0;
   height: 100%;
   width: 100%;
-  background: linear-gradient(180deg, rgba(73, 73, 73, 0.5) 70%, var(--main-white));
+  background: linear-gradient(
+    180deg,
+    rgba(73, 73, 73, 0.5) 70%,
+    var(--main-white)
+  );
   z-index: 2;
 }
 
@@ -24,7 +28,7 @@
   width: 100%;
   height: 12.5vh;
   padding: 1.5rem 4rem;
-  z-index: 30;
+  z-index: 50;
   transition: all 0.3s ease;
   font-size: 1rem;
 }
