--- a/assets/styles/layanan.css
+++ b/assets/styles/layanan.css
@@ -1,1 +1,8 @@
-
+.main {
+  padding: 15vh 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
