--- a/assets/styles/master.css
+++ b/assets/styles/master.css
@@ -51,7 +51,7 @@
   );
 
   --main-white: #ffffff;
-  --main-offwhite: #fcfbf8;
+  --main-offwhite: #fefefc;
   --main-lightgray: #999999;
   --main-darkgray: #384340;
   --main-charcoal: #212629;
