--- a/assets/styles/berita-list.css
+++ b/assets/styles/berita-list.css
@@ -68,7 +68,7 @@
   gap: 0.5rem;
   background-color: var(--main-offwhite);
   padding: 1.25rem;
-  box-shadow: 0 0 0.75rem rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0 0.75rem var(--black-15);
   border-radius: 1rem;
 }
 
