--- a/assets/styles/footer.css
+++ b/assets/styles/footer.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  color: var(--main-white);
+  color: white;
   padding: 3rem 3rem 1rem 3rem;
   gap: 3rem;
 }
