--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -144,7 +144,7 @@
   height: 90%;
   border-radius: 0.5rem;
   border: 0.01rem solid var(--main-lightgray);
-  box-shadow: 0 0 0.75rem rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0 0.75rem var(--black-15);
 }
 
 .berita-foto-link:hover {
@@ -160,7 +160,7 @@
   gap: 0.5rem;
   background-color: var(--main-offwhite);
   padding: 1.25rem;
-  box-shadow: 0 0 0.75rem rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0 0.75rem var(--black-15);
   border-radius: 1rem;
 }
 
