--- a/assets/styles/accessibility.css
+++ b/assets/styles/accessibility.css
@@ -1,4 +1,4 @@
-.accessibility {
+.accessibility-btn {
   top: 95%;
   left: 95%;
   width: 5%;
@@ -13,7 +13,7 @@
 #accessability-btn {
   position: relative;
   height: 3.5rem;
-  filter: drop-shadow(0 0 0.5rem rgba(0, 0, 0, 0.3));
+  filter: drop-shadow(0 0 0.5rem var(--black-30));
   margin: 2rem;
 }
 
@@ -22,17 +22,19 @@
 }
 
 .accessibility-menu {
+  position: fixed;
+  top: 0;
+  right: 0;
   display: none;
   flex-direction: column;
-  width: 50vw;
+  width: 30vw;
   height: 100vh;
   z-index: 200 !important;
   background-color: var(--main-offwhite);
   padding: 1.5rem;
   gap: 1rem;
-  box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 0.5rem var(--black-30);
   align-items: center;
-  position: relative;
 }
 
 .accessibility-menu.visible {
@@ -46,6 +48,7 @@
 
 .acc-row {
   width: 100%;
+  height: 100%;
   display: flex;
   gap: 1rem;
   justify-content: center;
@@ -53,24 +56,36 @@
 
 .acc-card {
   background-color: var(--main-white);
-  width: 30%;
-  padding: 1rem;
+  width: 100%;
+  padding: 1rem 2rem;
   border-radius: 0.75rem;
-  box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.15);
-  font-size: 0.85rem;
+  box-shadow: 0 0 0.5rem var(--black-15);
+  font-size: 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   text-align: center;
   gap: 0.75rem;
   transition: all 0.3s ease;
+  user-select: none;
+  -webkit-user-select: none;
 }
 
 .acc-card img {
-  height: 3.5rem;
+  height: 4.25rem;
 }
 
-.acc-card:hover {
+.acc-card img.slight-big {
+  transform: scale(1.5);
+}
+
+.acc-card img.slight-small {
+  transform: scale(0.75);
+}
+
+.acc-card:hover,
+.reset-btn:hover {
   cursor: pointer;
   transform: scale(1.05);
 }
@@ -85,4 +100,38 @@
 
 #acc-close-btn:hover {
   cursor: pointer;
+}
+
+.reset-btn {
+  background-color: var(--main-white);
+  font-size: 1rem;
+  padding: 1rem 1.5rem;
+  border: none;
+  border-radius: 0.75rem;
+  box-shadow: 0 0 0.5rem var(--black-15);
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  transition: all 0.3s ease;
+}
+
+.reset-btn img {
+  height: 1.25rem;
+}
+
+.steps-container {
+  width: 100%;
+  display: flex;
+  gap: 0.5rem;
+}
+
+.steps {
+  width: 100%;
+  height: 0.3rem;
+  background-color: var(--main-lightgray);
+  border-radius: 0.5rem;
+}
+
+.steps.active {
+  background-color: var(--main-charcoal);
 }
