--- a/assets/styles/berita.css
+++ b/assets/styles/berita.css
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
+  align-items: stretch;
   padding: 7.5vh 12.5vh;
   gap: 2rem;
 }
