--- a/assets/styles/lapor.css
+++ b/assets/styles/lapor.css
@@ -8,7 +8,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  box-shadow: 0 0 0.75rem rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0 0.75rem var(--black-15);
   gap: 2rem;
 }
 
@@ -44,14 +44,14 @@
   font-size: 1rem;
   background-color: transparent;
   border-radius: 0.5rem;
-  border: 0.1rem solid #999999;
+  border: 0.1rem solid var(--main-lightgray);
   transition: all 0.3s ease;
   font-family: inherit;
 }
 
 .form-input:focus,
 .password-input-container:hover {
-  border-color: var(--main-primary);
+  border-color: var(--main-melon);
   outline: none;
 }
 
@@ -62,7 +62,7 @@
 }
 
 .form-btn {
-  width: 50%;
+  width: 40%;
   background: var(--primary-gradient);
   padding: 0.75rem;
   border-radius: 1rem;
@@ -81,7 +81,7 @@
 .password-input-container {
   padding: 0.75rem;
   border-radius: 0.5rem;
-  border: 0.1rem solid #999999;
+  border: 0.1rem solid var(--main-lightgray);
   transition: all 0.3s ease;
   display: flex;
   justify-content: flex-start;
@@ -114,7 +114,7 @@
 }
 
 .checkbox {
-  accent-color: var(--main-primary);
+  accent-color: var(--main-emerald);
   cursor: pointer;
   height: 1rem;
   width: 1rem;
@@ -125,7 +125,7 @@
 }
 
 .checkbox-label a {
-  color: var(--main-primary);
+  color: var(--main-melon);
 }
 
 .checkbox-label a:hover {
