--- a/assets/styles/search.css
+++ b/assets/styles/search.css
@@ -2,7 +2,7 @@
   width: 80%;
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
+  gap: 1rem;
 }
 
 .query-container {
@@ -98,10 +98,14 @@
 }
 
 .empty-result {
-  font-size: 1.25rem;
+  color: var(--main-lightgray);
 }
 
 .empty-result strong {
   font-weight: 500;
   color: var(--main-melon);
+}
+
+.empty-result.hidden {
+  display: none;
 }
