--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -208,3 +208,25 @@
 .berita-container a:hover {
   text-decoration: underline;
 }
+
+.main-text-section-img {
+  width: 45%;
+  border-radius: 1rem;
+  box-shadow: 0 0 0.75rem var(--black-15);
+}
+
+.main-text-section-header {
+  font-weight: 500;
+  font-size: 1.5rem;
+}
+
+.main-text-section-container {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+}
+
+.main-text-section-desc {
+  font-size: 0.95rem;
+  color: var(--main-darkgray);
+}
