--- a/assets/styles/main-text-template.css
+++ b/assets/styles/main-text-template.css
@@ -84,3 +84,20 @@
 .melon {
   color: var(--main-melon);
 }
+
+.h-50vh {
+  height: 50vh;
+}
+
+.primary-btn {
+  background: var(--primary-gradient);
+  color: white;
+  border: none;
+  border-radius: 1rem;
+  padding: 0.75rem 1.5rem;
+  font-size: 1.15rem;
+}
+
+.w-80 {
+  width: 80%;
+}
