--- a/assets/styles/lapor.css
+++ b/assets/styles/lapor.css
@@ -3,7 +3,7 @@
   width: 65%;
   background-color: var(--main-offwhite);
   border-radius: 2rem;
-  padding: 2rem 3rem;
+  padding: 3rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -195,7 +195,7 @@
 }
 
 .file-input-text {
-  color: #999;
+  color: var(--main-lightgray);
   font-size: 1rem;
   flex: 1;
 }
@@ -205,4 +205,26 @@
   height: 1.5rem;
   opacity: 0.6;
   flex-shrink: 0;
+}
+
+.notelp-container {
+  padding: 0.75rem;
+  font-size: 1rem;
+  border-radius: 0.5rem;
+  color: var(--main-lightgray);
+  border: 0.1rem solid var(--main-lightgray);
+  transition: all 0.3s ease;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.notelp-container input {
+  padding: 0;
+  font-size: 1rem;
+  background-color: transparent;
+  font-family: inherit;
+  border: none;
+  outline: none;
 }
