--- a/assets/styles/carousel.css
+++ b/assets/styles/carousel.css
@@ -1,125 +1,86 @@
-@import url("https://fonts.bunny.net/css?family=abel:400");
-
-@layer base {
-  *,
-  *::before,
-  *::after {
-    box-sizing: border-box;
-  }
+.carousel-container {
+  width: 100%;
+  height: 210px;
+  top: 100%;
+  left: 50%;
+  transform: translate(-50%, 0);
+  overflow: hidden;
 }
 
-@layer demo {
-  .carousel {
-    --items: 6;
-    --carousel-duration: 40s;
-    --carousel-width: 95%;
-    --carousel-item-width: 15vw;
-    --carousel-item-height: 15vw;
-    --carousel-item-gap: 2rem;
+.carousel-overlay {
+  position: absolute;
+  top: 26.3%;
+  width: 1220px;
+  height: 200px;
+  pointer-events: none;
+  z-index: 5;
+  background: linear-gradient(
+    to right,
+    var(--main-white) 0%,
+    transparent 3.5%,
+    transparent 96.5%,
+    var(--main-white) 100%
+  );
+}
 
-    position: relative;
-    width: var(--carousel-width);
-    height: calc(var(--carousel-item-height) + 2rem);
+.carousel {
+  display: flex;
+  gap: 2rem;
+  pointer-events: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  will-change: transform;
+}
 
-    overflow: visible;
+.carousel-item {
+  flex-shrink: 0;
+  height: 200px;
+  width: 200px;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  pointer-events: auto;
+  border-radius: 1rem;
+  position: relative;
+}
 
-    &[mask] {
-      overflow-x: hidden;
-    }
-    &[mask]::before {
-      content: "";
-      position: absolute;
-      inset: 0;
-      pointer-events: none;
-      z-index: 2;
-      background: linear-gradient(
-        to right,
-        var(--main-white) 0%,
-        transparent 5%,
-        transparent 95%,
-        var(--main-white) 100%
-      );
-    }
+.carousel-btn {
+  display: none;
+  background: var(--primary-gradient);
+  border: none;
+  color: white;
+  padding: 0.5rem 0.75rem;
+  border-radius: 1rem;
+  z-index: 5;
+  position: relative;
+}
 
-    &[reverse] > .carousel-item {
-      animation-direction: reverse;
-    }
+.darken {
+  display: none;
+  border-radius: 1rem;
+  width: 200px;
+  height: 200px;
+  position: absolute;
+  inset: 0;
+  background: rgb(0, 0, 0, 0.2);
+  pointer-events: none;
+  z-index: 1;
+}
 
-    &:hover > .carousel-item {
-      animation-play-state: paused;
-    }
-  }
+.carousel-btn {
+  position: relative;
+  pointer-events: auto;
+  z-index: 5;
+}
 
-  .carousel.dragging {
-    cursor: grabbing;
-  }
+.carousel-item img {
+  height: 100%;
+}
 
-  .carousel > .carousel-item {
-    position: absolute;
-    top: 0.5rem;
-    left: calc(100% + var(--carousel-item-gap));
-    width: var(--carousel-item-width);
-    height: var(--carousel-item-height);
-    display: flex;
-    background: var(--main-offwhite);
-    will-change: transform;
-    animation-name: marquee;
-    animation-duration: var(--carousel-duration);
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-delay: calc(
-      (var(--carousel-duration) / var(--items)) * var(--i) * -1
-    );
-    border-radius: 0.5rem;
-    box-shadow: 0 0 0.75rem var(--black-15);
-    transition: all 0.3s ease;
-  }
-
-  .carousel > .carousel-item:is(:nth-child(1)) {
-    --i: 0;
-  }
-  .carousel > .carousel-item:is(:nth-child(2)) {
-    --i: 1;
-  }
-  .carousel > .carousel-item:is(:nth-child(3)) {
-    --i: 2;
-  }
-  .carousel > .carousel-item:is(:nth-child(4)) {
-    --i: 3;
-  }
-  .carousel > .carousel-item:is(:nth-child(5)) {
-    --i: 4;
-  }
-  .carousel > .carousel-item:is(:nth-child(6)) {
-    --i: 5;
-  }
-  .carousel > .carousel-item:is(:nth-child(7)) {
-    --i: 6;
-  }
-  .carousel > .carousel-item:is(:nth-child(8)) {
-    --i: 7;
-  }
-
-  .carousel img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 0.5rem;
-  }
-
-  .carousel-item:hover {
-    cursor: pointer;
-    transform: scale(1.05);
-  }
-
-  @keyframes marquee {
-    to {
-      transform: translateX(
-        calc(
-          var(--items) * (var(--carousel-item-width) + var(--carousel-item-gap)) *
-            -1
-        )
-      );
-    }
-  }
+.carousel-item:hover .carousel-btn,
+.carousel-item:hover .darken {
+  display: flex;
 }
