--- a/assets/styles/animations.css
+++ b/assets/styles/animations.css
@@ -9,3 +9,12 @@
     transform: translateY(0);
   }
 }
+
+@keyframes highlight-fade {
+  0% {
+    background-color: var(--main-lightgray);
+  }
+  100% {
+    background-color: transparent;
+  }
+}
