--- a/assets/styles/carousel.css
+++ b/assets/styles/carousel.css
@@ -11,7 +11,7 @@
   position: absolute;
   top: 26.3%;
   width: 1220px;
-  height: 200px;
+  height: 220px;
   pointer-events: none;
   z-index: 5;
   background: linear-gradient(
@@ -86,4 +86,34 @@
 .carousel-item:hover .carousel-btn,
 .carousel-item:hover .darken {
   display: flex;
+}
+
+.splide {
+  overflow-x: hidden;
+  width: 100%;
+}
+
+.splide__track {
+  padding: 0.75rem 0;
+}
+
+.splide__list {
+  gap: 2rem;
+  list-style: none;
+}
+
+.splide__slide {
+  width: 200px;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: none;
+  cursor: grab;
+  border-radius: 1rem;
+  box-shadow: 0 0 0.75rem var(--black-15);
+}
+
+.splide__slide.is-active {
+  cursor: grabbing;
 }
