--- a/assets/styles/skpd-dropdown.css
+++ b/assets/styles/skpd-dropdown.css
@@ -1,4 +1,4 @@
-.main-query-container {
+.skpd-dropdown-container {
   width: 80%;
   display: flex;
   flex-direction: column;
@@ -28,7 +28,7 @@
   gap: 0.5rem;
 }
 
-.result-title-container {
+.skpd-dropdown-title-container {
   font-size: 1.25rem;
   background-color: var(--main-offwhite);
   box-shadow: 0 0 0.75rem var(--black-15);
@@ -39,16 +39,16 @@
   justify-content: space-between;
 }
 
-.result-title-container:hover {
+.skpd-dropdown-title-container:hover {
   cursor: pointer;
 }
 
-.result-title-container.active {
+.skpd-dropdown-title-container.active {
   background: var(--primary-gradient);
   color: white;
 }
 
-.result-title-container.active .result-arrow-icon {
+.skpd-dropdown-title-container.active .result-arrow-icon {
   filter: brightness(0) invert(1);
   transform: rotate(180deg);
 }
@@ -64,15 +64,16 @@
   display: flex;
 }
 
-.result-inner-container {
+.skpd-dropdown-inner-container {
   width: 97.5%;
   background-color: var(--main-offwhite);
   box-shadow: 0 0 0.75rem var(--black-15);
   padding: 0.5rem 1.25rem;
   border-radius: 0.75rem;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
+  flex-direction: column;
 }
 
 .result-arrow-icon {
@@ -80,32 +81,24 @@
   transition: all 0.3s ease;
 }
 
-.result-title {
+.skpd-dropdown-title {
   display: flex;
   align-items: center;
   gap: 0.75rem;
 }
 
-.result-title-desc {
+.skpd-dropdown-title-desc {
   display: flex;
   gap: 0.5rem;
   font-size: 0.9rem;
   color: var(--main-melon);
 }
 
-.result-title-desc.active {
+.skpd-dropdown-title-desc.active {
   color: white;
 }
 
-.empty-result {
-  color: var(--main-lightgray);
-}
-
-.empty-result strong {
+.skpd-inner-title {
+  font-size: 1.25rem;
   font-weight: 500;
-  color: var(--main-melon);
-}
-
-.empty-result.hidden {
-  display: none;
 }
