--- a/assets/styles/skpd-dropdown.css
+++ b/assets/styles/skpd-dropdown.css
@@ -25,7 +25,7 @@
 .main-result-container {
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
+  gap: 1rem;
 }
 
 .skpd-dropdown-title-container {
@@ -57,7 +57,7 @@
   display: none;
   flex-direction: column;
   align-items: center;
-  gap: 0.5rem;
+  gap: 1rem;
 }
 
 .results-container.active {
@@ -68,12 +68,13 @@
   width: 97.5%;
   background-color: var(--main-offwhite);
   box-shadow: 0 0 0.75rem var(--black-15);
-  padding: 0.5rem 1.25rem;
+  padding: 1rem 1.25rem;
   border-radius: 0.75rem;
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
   flex-direction: column;
+  gap: 1rem;
 }
 
 .result-arrow-icon {
@@ -101,4 +102,27 @@
 .skpd-inner-title {
   font-size: 1.25rem;
   font-weight: 500;
+}
+
+.skpd-info-container {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.skpd-info-inner-container {
+  display: flex;
+  gap: 0.25rem;
+  align-items: center;
+}
+
+.skpd-inner-icon {
+  height: 1.5rem;
+}
+
+.skpd-info-inner-container a:hover {
+  color: var(--main-melon);
+  cursor: pointer;
+  text-decoration: underline;
 }
