--- a/assets/styles/carousel.css
+++ b/assets/styles/carousel.css
@@ -10,8 +10,8 @@
 .carousel-overlay {
   position: absolute;
   top: 26.3%;
-  width: 1220px;
-  height: 220px;
+  width: 100%;
+  height: 100%;
   pointer-events: none;
   z-index: 5;
   background: linear-gradient(
