--- a/assets/styles/lapor.css
+++ b/assets/styles/lapor.css
@@ -9,7 +9,7 @@
   justify-content: center;
   align-items: center;
   box-shadow: 0 0 0.75rem var(--black-15);
-  gap: 2rem;
+  gap: 1rem;
 }
 
 .lapor-form {
@@ -30,7 +30,7 @@
 }
 
 .form-title {
-  font-size: 2.75rem;
+  font-size: 2.25rem;
   font-weight: 600;
   color: var(--main-melon);
 }
@@ -42,6 +42,7 @@
 .form-input {
   padding: 0.75rem;
   font-size: 1rem;
+  color: inherit;
   background-color: transparent;
   border-radius: 0.5rem;
   border: 0.1rem solid var(--main-lightgray);
@@ -148,13 +149,17 @@
 .form-textarea {
   padding: 0.75rem;
   font-size: 1rem;
+  color: inherit;
   background-color: transparent;
   border-radius: 0.5rem;
   border: 0.1rem solid var(--main-lightgray);
   transition: all 0.3s ease;
   font-family: inherit;
-  min-height: 120px;
   resize: vertical;
+}
+
+.permasalahan-ta {
+  min-height: 120px;
 }
 
 .form-textarea:focus {
@@ -227,4 +232,15 @@
   font-family: inherit;
   border: none;
   outline: none;
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+  font-size: 1.5rem;
+}
+
+option {
+  color: inherit;
+  font-size: 0.85rem;
+  background-color: var(--main-offwhite);
+  /* border-bottom: 0.1rem solid var(--main-lightgray); */
 }
