--- a/assets/styles/master.css
+++ b/assets/styles/master.css
@@ -89,7 +89,8 @@
   --black-30: rgba(128, 128, 128, 0.3);
 }
 
-[data-theme="dark"] .invert-icons {
+[data-theme="dark"] .invert-icons,
+[data-theme="dark"] input[type="date"]::-webkit-calendar-picker-indicator {
   filter: brightness(0) invert(1);
 }
 
